using openrewrite to migrate to java 17